--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -161,4 +161,4 @@ jobs:
     steps:
       - name: Build Notify
         run: |
-          curl "https://api.day.app/${{ secrets.BARK_PUSH_KEY }}/docker sync/镜像同步成功"
+          curl https://api.day.app/${{ secrets.BARK_PUSH_KEY }}/docker%20sync/镜像同步成功
